# django-rest-framework-boilerplate

./: .env.sample  Dockerfile  LICENSE  README.md  docker-compose.yml  project.postman_collection.json  pyproject.toml  pytest.ini  requirements.txt  test.sql
api/: conftest.py  settings.py  urls.py
api/account/: serializers.py  views.py
api/admin/: views.py
api/blog/: apps.py  models.py  serializers.py  urls.py  views.py
api/blog/migrations/: 0001_initial.py  0002_blog_image.py  0003_category_blog_category.py
api/blog/tests/: conftest.py  test_blog.py  test_category.py  test_stats.py
api/core/: exception_handler.py  middleware.py  mixins.py  models.py  services.py  views.py
api/core/migrations/: 0001_initial.py
api/core/tests/: factories.py  test_seed.py  text_client.py
api/users/: models.py  views.py
