[tool.poetry]
name = "django-rest-framework-boilerplate"
version = "0.1.0"
description = ""
authors = ["cemre-2187 <55685979+cemre-2187@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.8.1"
build = "1.2.1"
cachecontrol = "0.14.0"
certifi = "2024.7.4"
cffi = "1.17.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
crashtest = "0.4.1"
distlib = "0.3.8"
django = "5.0.7"
django-redis = "5.4.0"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
dulwich = "0.21.7"
fastjsonschema = "2.20.0"
filelock = "3.15.4"
idna = "3.7"
installer = "0.7.0"
jaraco-classes = "3.4.0"
keyring = "24.3.1"
more-itertools = "10.4.0"
msgpack = "1.0.8"
packaging = "24.1"
pexpect = "4.9.0"
pillow = "10.4.0"
pkginfo = "1.11.1"
platformdirs = "4.2.2"
poetry = "1.8.3"
poetry-core = "1.9.0"
poetry-plugin-export = "1.8.0"
psycopg2-binary = "2.9.9"
ptyprocess = "0.7.0"
pycparser = "2.22"
pyjwt = "2.9.0"
pyproject-hooks = "1.1.0"
python-dotenv = "1.0.1"
rapidfuzz = "3.9.6"
redis = "5.0.8"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
sqlparse = "0.5.1"
tomlkit = "0.13.2"
trove-classifiers = "2024.7.2"
urllib3 = "2.2.2"
virtualenv = "20.26.3"
xattr = "1.1.0"
pytest = "^8.3.2"
pytest-django = "^4.8.0"
factory-boy = "^3.3.1"
faker = "^28.0.0"
drf-yasg = "^1.21.7"
setuptools = "^74.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
